# hsdwl

./: .gitignore  1  LICENSE  README.md  a.txt  main.c  meson.build
src/: .#config.c  .config.c.swp  animation.c  animation.h  binding.c  binding.h  config.c  config.h  config_defs.h  constraint.c  constraint.h  deco.c  deco.h  input.c  input.h  layer-shell.c  layer-shell.h  main.c  meson.build  output-management.c  output-management.h  output.c  output.h  pointer.c  pointer.h  seat.c  seat.h  server.c  server.h  stage-3d.c  stage-3d.h  stage-anim.c  stage-anim.h  stage-sidebar.c  stage-sidebar.h  stage-util.c  stage-util.h  stage.c  stage.h  tab-group-anim.c  (+14 more)
