hsdwl_src = files(
  'animation.c',
  'binding.c',
  'config.c',
  'deco.c',
  'layer-shell.c',
  'main.c',
  'server.c',
  'stage-3d.c',
  'stage-anim.c',
  'tab-group-anim.c',
  'tab-group-layout.c',
  'view-maximize.c',
  'view.c',
  'input.c',
  'output-management.c',
  'output.c',
  'pointer.c',
  'seat.c',
  'stage-sidebar.c',
  'stage.c',
  'tab-group.c',
  'xwayland.c',
)
