hsdwl_src = files(
  'animation.c',
  'binding.c',
  'config.c',
  'constraint.c',
  'deco.c',
  'layer-shell.c',
  'main.c',
  'server.c',
  'stage-3d.c',
  'view-capture.c',
  'stage-anim.c',
  'tab-group-anim.c',
  'tab-group-layout.c',
  'view-maximize.c',
  'view.c',
  'input.c',
  'output-management.c',
  'output.c',
  'pointer.c',
  'seat.c',
  'stage-sidebar.c',
  'stage-util.c',
  'stage.c',
  'tab-group.c',
  'xwayland.c',
)
